# wikipedia-network-analysis

./: .gitignore  Exploration.ipynb  README.md  pyproject.toml  requirements.txt
src/: create_bounce_rate_data.py  create_properties_data.py  predict_bounce_rate.py
