[tool.poetry]
name = "wikipedia-network-analysis"
version = "0.1.0"
description = ""
authors = ["Simran Jackson"]
readme = "README.md"
packages = [{include = "wikipedia_network_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
numpy = "^1.25.1"
networkx = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
