[tool.poetry]
name = "wikipedia-network-analysis"
version = "0.1.0"
description = ""
authors = ["Simran Jackson <simran.l.jackson@gmail.com>"]
readme = "README.md"
packages = [{include = "wikipedia_network_analysis"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = ">1"
pandas = "^2.0.3"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
shap = "^0.42.1"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
